--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -167,7 +167,7 @@
     border: none;
     border-radius: 4px;
     margin-left: $tabs-item-margin-left;
-    background-color: transparent;
+    background-color: transparent; // 修改为透明，突出选中项
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
     color: $text-regular;
     font-size: $font-size-sm;
